Closed Bug 1784313 Opened 3 years ago Closed 3 years ago

"Protect privacy" bar not present anymore when remote content present in message - for imap messages and .eml

Categories

(Thunderbird :: Message Reader UI, defect)

Thunderbird 105
defect

Tracking

(thunderbird_esr91 fixed, thunderbird_esr102 fixed, thunderbird104 unaffected)

RESOLVED FIXED
105 Branch
Tracking Status
thunderbird_esr91 --- fixed
thunderbird_esr102 --- fixed
thunderbird104 --- unaffected

People

(Reporter: bernat, Assigned: mkmelin)

References

Details

(Keywords: regression)

Attachments

(1 file)

Steps to reproduce:

  1. Upgrade to Daily 2022-08-11.
  2. Display a message with remote content

Actual results:

The "To protect your privacy, Daily has blocked remote content in this message" bar is not present anymore.

Expected results:

The bar should still be here. Downgrading to Daily 2022-08-05 fixes the issue.

I see this. Curiously for IMAP messages only! Works as it should for local messages.
From bug 1783831.

Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
Summary: "Protect privacy" bar not present anymore when remote content present in message → "Protect privacy" bar not present anymore when remote content present in message - for imap messages only

Found the problem, but still trying to understand it some angles to it.

.eml files opened from file are also affected

Summary: "Protect privacy" bar not present anymore when remote content present in message - for imap messages only → "Protect privacy" bar not present anymore when remote content present in message - for imap messages and .eml
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/af504df13b19
Fix remote content warning for imap messages and .eml messages. r=benc

Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 105 Branch

Comment on attachment 9289841 [details]
Bug 1784313 - Fix remote content warning for imap messages and .eml messages. r=benc

[Approval Request Comment]
Regression caused by (bug #): 1783831
User impact if declined: No "remote content blocked" bar is shown for IMAP messages
Testing completed (on c-c, etc.): on beta since 2022-08-22
Risk to taking this patch (and alternatives if risky): Risk is warranted given that a missing content blocked bar is rather noticeable.

Attachment #9289841 - Flags: approval-comm-esr102?

Comment on attachment 9289841 [details]
Bug 1784313 - Fix remote content warning for imap messages and .eml messages. r=benc

[Triage Comment]
Approved for esr102

Attachment #9289841 - Flags: approval-comm-esr102? → approval-comm-esr102+

Comment on attachment 9289841 [details]
Bug 1784313 - Fix remote content warning for imap messages and .eml messages. r=benc

[Triage Comment]
Approved for 91.

Attachment #9289841 - Flags: approval-comm-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: