Bug 1784313 - Fix remote content warning for imap messages and .eml messages. r=benc

Differential Revision: https://phabricator.services.mozilla.com/D154623

--HG--
extra : rebase_source : e06f07820be52262db752f1148a28724d9051819